1.2-2

* Minor proof reading of documentation.

* Added an argument "extraMSMargs" to the algo.hmm function.

* Fixed bug in outbreakP when having observations equal to zero
  in the beginning. Here, \hat{\mu}^{C1} in (5) of Frisen et al (2008)
  is zero and hence the log-based summation in the code failed. 
  Changed to product as in the original code, which however might be
  less numerically stable.
  


1.2-1 (uploaded to CRAN on 10/06/2010)
======================================

* Added algo.outbreakP (Frisen & Andersson, 2009) providing a
  semiparametric approach for outbreak detection for Poisson
  distributed variables.

* Added a pure R function for extracting ISO week and year from Date
  objects. This function (isoWeekYear) is only called if "%G" and "%V"
  format strings are used on Windows (sessionInfo()[[1]]$os == "mingw32")
  as this is not implemented for "format.Date" on Windows.  
  Thanks to Ashley Ford,  University of Warwick, UK for identifying 
  this Windows specific bug.

* For algo.farrington a faster fit routine "algo.farrington.fitGLM.fast"
  has been provided by Mikko Virtanen, National Institute for Health 
  and Welfare, Finland. The new function calls glm.fit
  directly, which gives a doubling of speed for long series. However, if one 
  wants to process the fitted model output some of the GLM routines might
  not work on this output. For backwards compability the argument
  control$fitFun = "algo.farrington.fitGLM" provides the old (and slow)
  behaviour.
  
1.1-6 (uploaded on CRAN 25/05/2010)
===================================

* a few minor bug fixes

* small improvements on the twins function by Daniel Sabanes Bove
  fixing the segmentation fault issue of the function on Ubuntu.


1.1-0 (uploaded on CRAN 14/10/2009)
===================================

* Added the functions categoricalCUSUM and LRCUSUM.runlength
  for the CUSUM monitoring of general categorical time series